--- a/src/app/components/tv/tv.html
+++ b/src/app/components/tv/tv.html
@@ -1,5 +1,5 @@
 <section class="container">
-  <div class="row">
+  <div class="row" animate.enter="enter-animation">
     @for (item of tv(); track item.id) {
     <div
       class="col-lg-3 col-md-4 col-sm-6 col-12"
