--- a/src/app/components/movies/movies.scss
+++ b/src/app/components/movies/movies.scss
@@ -5,8 +5,9 @@
   border: 0.5px solid #ffffff4a;
   overflow: hidden;
   position: relative;
-  height: fit-content;
   transition: all 0.6s;
+  width: 95%;
+  height: fit-content;
   .image {
     width: 100%;
     height: 100%;
@@ -20,39 +21,15 @@
     }
   }
 }
-
+@media (max-width: 768px) {
+  .item-card {
+    width: 80%;
+  }
+}
 // .item-card:hover {
 //   animation: borderGradient 3s linear infinite alternate,
 //     dimensionChange 2s linear infinite;
 // }
-
-// @keyframes borderGradient {
-//   0% {
-//     border-color: red;
-//   }
-//   25% {
-//     border-color: orange;
-//   }
-//   50% {
-//     border-color: yellow;
-//   }
-//   75% {
-//     border-color: green;
-//   }
-//   100% {
-//     border-color: blue;
-//   }
-// }
-
-@keyframes dimensionChange {
-  // 0%,
-  // 100% {
-  //   transform: scale(1);
-  // }
-  // 50% {
-  //   transform: scale(1.1);
-  // }
-}
 
 .item-rate {
   position: absolute;
