--- a/src/app/components/people/people.html
+++ b/src/app/components/people/people.html
@@ -2,7 +2,7 @@
   <div class="row" animate.enter="enter-animation">
     @for (item of people(); track item.id) {
     <div
-      class="col-lg-3 col-md-4 col-sm-6 col-12"
+      class="col-lg-3 col-md-4 col-sm-6 col-12 d-flex justify-content-center align-items-center pt-4 pt-sm-2"
       appStructuredDataDirective
       [appStructuredData]="{
         '@context': 'https://schema.org',
@@ -34,6 +34,6 @@
 </section>
 
 <app-pagination
-  [config]="paginationConfig"
+  [config]="paginationConfig()"
   (pageChange)="changePage($event)"
 ></app-pagination>
