--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  @if (config().totalPages>1) {
+  @if (totalPages()>1) {
 
   <nav
     aria-label="Page navigation"
@@ -31,15 +31,13 @@
       </li>
 
       <!-- Page Numbers -->
-      <li
-        class="page-item"
-        *ngFor="let page of pages"
-        [class.active]="page === currentPage()"
-      >
+      @for ( page of paginatorPages(); track $index) {
+      <li class="page-item" [class.active]="page === currentPage()">
         <a class="page-link" href="javascript:void(0)" (click)="goToPage(page)">
           {{ page }}
         </a>
       </li>
+      }
 
       <!-- Next Page -->
       <li class="page-item" [class.disabled]="isLastPage()">
