--- a/src/app/shared/components/search/search.component.html
+++ b/src/app/shared/components/search/search.component.html
@@ -1,11 +1,4 @@
-<!-- <form [formGroup]="form" [ngClass]="{ 'disable-search-div': !showSearch() }">
-  <div class="search d-flex justify-content-start align-items-center gap-2">
-    <i class="fa-solid fa-magnifying-glass search-icon"></i>
-    <input type="text" formControlName="query" />
-  </div>
-</form> -->
-
-<form [formGroup]="form">
+<form [formGroup]="form" [ngClass]="{ 'disable-search-div': !showSearch() }">
   <div class="search d-flex justify-content-start align-items-center gap-2">
     <i class="fa-solid fa-magnifying-glass search-icon"></i>
     <input type="text" formControlName="query" />
