--- a/src/app/components/movies/movies.html
+++ b/src/app/components/movies/movies.html
@@ -1,4 +1,5 @@
-<section class="container">
+@if (movies().length>0) {
+<section>
   <div class="row">
     @for (item of movies(); track item.id) {
     <app-card
@@ -6,7 +7,9 @@
       class="col-lg-3 col-md-4 col-sm-6 col-12"
       [data$]="item"
       [index]="$index"
+      (keydown.enter)="go(item.id)"
       [routerLink]="['./movie-details', item.id]"
+      [ariaLabel]="item.title"
       appStructuredDataDirective
       [appStructuredData]="{
         '@context': 'https://schema.org',
@@ -30,3 +33,38 @@
   [config]="paginationConfig()"
   (pageChange)="changePage($event)"
 ></app-pagination>
+}@else{
+
+<div
+  style="height: 80vh"
+  class="d-flex justify-content-center align-items-center w-100"
+>
+  <div class="spinner-grow text-primary" role="status">
+    <span class="sr-only"></span>
+  </div>
+  <div class="spinner-grow text-secondary" role="status">
+    <span class="sr-only"></span>
+  </div>
+  <div class="spinner-grow text-success" role="status">
+    <span class="sr-only"></span>
+  </div>
+  <div class="spinner-grow text-danger" role="status">
+    <span class="sr-only"></span>
+  </div>
+  <div class="spinner-grow text-warning" role="status">
+    <span class="sr-only"></span>
+  </div>
+  <div class="spinner-grow text-info" role="status">
+    <span class="sr-only"></span>
+  </div>
+  <div class="spinner-grow text-light" role="status">
+    <span class="sr-only"></span>
+  </div>
+  <div class="spinner-grow text-dark" role="status">
+    <span class="sr-only"></span>
+  </div>
+  <div class="spinner-grow text-dark" role="status">
+    <span class="sr-only"></span>
+  </div>
+</div>
+}
