--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,3 +56,18 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.enter-animation {
+  animation: slide-fade 3s;
+}
+
+@keyframes slide-fade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
