--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,6 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div class="container-fluid">
+  <app-header></app-header>
+  <div class="container">
+    <router-outlet></router-outlet><app-footer></app-footer>
+  </div>
+</div>
