--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -1,3 +1,9 @@
+header {
+  position: sticky;
+  top: 0px;
+  z-index: 100000;
+  left: 0px;
+}
 .head {
   display: flex;
   justify-content: space-between;
@@ -6,7 +12,10 @@
   padding: 0px 1rem;
   border-bottom: 1px solid rgb(88, 86, 81);
 }
-
+.search-div {
+  display: flex;
+  justify-content: center;
+}
 .routes {
   position: relative;
   padding: 0px;
@@ -170,4 +179,38 @@ li {
   to {
     transform: translateX(50px);
   }
+}
+
+.enter-animation {
+  animation: slide-fade 3s;
+}
+
+@keyframes slide-fade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.leave-animation {
+  animation: slide-fade 3s;
+}
+
+@keyframes slide-fade {
+  from {
+    opacity: 0;
+    transform: translateX(0);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(50);
+  }
+}
+
+.hidden {
+  visibility: hidden;
 }
