--- a/src/app/components/people/people.html
+++ b/src/app/components/people/people.html
@@ -1,4 +1,6 @@
-<section class="container">
+@if (people().length>0) {
+
+<section class="">
   <div class="row" animate.enter="enter-animation">
     @for (item of people(); track item.id) {
     <div
@@ -16,7 +18,11 @@
       <div class="item-card">
         <div class="image">
           <img
-            [ngSrc]="'https://image.tmdb.org/t/p/w500/' + item.profile_path"
+            [ngSrc]="
+              item.profile_path
+                ? 'https://image.tmdb.org/t/p/w500/' + item.profile_path
+                : 'assets/images/photo.png'
+            "
             [alt]="item.name"
             width="500"
             height="750"
@@ -37,3 +43,38 @@
   [config]="paginationConfig()"
   (pageChange)="changePage($event)"
 ></app-pagination>
+}@else{
+
+<div
+  style="height: 80vh"
+  class="d-flex justify-content-center align-items-center w-100"
+>
+  <div class="spinner-grow text-primary" role="status">
+    <span class="sr-only"></span>
+  </div>
+  <div class="spinner-grow text-secondary" role="status">
+    <span class="sr-only"></span>
+  </div>
+  <div class="spinner-grow text-success" role="status">
+    <span class="sr-only"></span>
+  </div>
+  <div class="spinner-grow text-danger" role="status">
+    <span class="sr-only"></span>
+  </div>
+  <div class="spinner-grow text-warning" role="status">
+    <span class="sr-only"></span>
+  </div>
+  <div class="spinner-grow text-info" role="status">
+    <span class="sr-only"></span>
+  </div>
+  <div class="spinner-grow text-light" role="status">
+    <span class="sr-only"></span>
+  </div>
+  <div class="spinner-grow text-dark" role="status">
+    <span class="sr-only"></span>
+  </div>
+  <div class="spinner-grow text-dark" role="status">
+    <span class="sr-only"></span>
+  </div>
+</div>
+}
