--- a/src/app/components/series-details/series-details.html
+++ b/src/app/components/series-details/series-details.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="">
   <div class="row row-gap-4">
     <div class="col-12 mb-3">
       <h1 class="section__title">{{ series()?.original_name }}</h1>
