--- a/src/app/shared/components/card/card.html
+++ b/src/app/shared/components/card/card.html
@@ -1,4 +1,4 @@
-<div>
+<div class="d-flex justify-content-center align-items-center">
   <div class="item-card" [class.homecard]="isHome()">
     <span
       [style.border]="'2px solid ' + getBorderColor(data$().vote_average)"
