--- a/src/app/components/series-details/series-details.html
+++ b/src/app/components/series-details/series-details.html
@@ -93,7 +93,9 @@
     <ng-container *ngIf="viewMode() === 'grid'; else accordionView">
       <div class="row">
         @for (item of series()?.seasons; track item.id) {
-        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+        <div
+          class="col-lg-3 col-md-4 col-sm-6 col-12 d-flex justify-content-center"
+        >
           <div class="item-card">
             <span
               [style.border]="'2px solid ' + getBorderColor(item.vote_average)"
