--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -25,6 +25,46 @@ header {
   align-items: center;
   gap: 3rem;
 }
+.ai.active {
+  color: white;
+  transform: scale(1);
+  padding: 5px;
+  border-bottom: 1px solid var(--primary);
+}
+.ai-feature {
+  background-color: var(--primary);
+  color: white;
+  padding: 3px;
+  border-radius: 8px;
+  transform: scale(1);
+
+  // text-transform: uppercase;
+  animation: pulse 1.5s infinite;
+  box-shadow: 0 0 8px rgba(255, 215, 0, 0.6);
+  &:hover {
+    color: white;
+    // font-size: large;
+    // font-weight: 600;
+
+    border-bottom: 1px solid var(--primary);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.2);
+    opacity: 0.7;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
 ul {
   list-style: none;
   display: flex;
@@ -97,6 +137,8 @@ li {
 @media (max-width: 768px) {
   .app-search {
     flex-grow: 1;
+    display: flex;
+    justify-content: center;
   }
   .burger {
     display: block;
