--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -133,7 +133,7 @@
 
         <li
           (click)="searchText.set('')"
-          [routerLink]="['ai']"
+          [routerLink]="['/ai']"
           routerLinkActive="active"
           [routerLinkActiveOptions]="{ exact: false }"
           (keydown.enter)="go('ai')"
