--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -41,12 +41,14 @@ li.ai {
   transform: scale(1);
   padding: 5px;
   border-bottom: 1px solid var(--primary);
+  text-wrap: nowrap;
 }
 .ai-feature {
   background-color: var(--primary);
   color: white;
   padding: 3px;
   border-radius: 8px;
+  text-wrap: nowrap;
 
   // text-transform: uppercase;
   animation: pulse 1.5s infinite;
