--- a/src/app/shared/components/pagination/pagination.component.html
+++ b/src/app/shared/components/pagination/pagination.component.html
@@ -8,39 +8,43 @@
     <ul class="pagination">
       <!-- First Page -->
       <li class="page-item" [class.disabled]="isFirstPage()">
-        <a class="page-link" (click)="goToFirst()" aria-label="First">
+        <span class="page-link" (click)="goToFirst()" aria-label="First">
           <span aria-hidden="true">&laquo;&laquo;</span>
-        </a>
+        </span>
       </li>
 
       <!-- Previous Page -->
       <li class="page-item" [class.disabled]="isFirstPage()">
-        <a class="page-link" (click)="goToPrevious()" aria-label="Previous">
+        <span class="page-link" (click)="goToPrevious()" aria-label="Previous">
           <span aria-hidden="true">&laquo;</span>
-        </a>
+        </span>
       </li>
 
       <!-- Page Numbers -->
       @for ( page of paginatorPages(); track $index) {
       <li class="page-item" [class.active]="page === currentPage()">
-        <a class="page-link" href="javascript:void(0)" (click)="goToPage(page)">
+        <span
+          class="page-link"
+          href="javascript:void(0)"
+          (click)="goToPage(page)"
+        >
           {{ page }}
-        </a>
+        </span>
       </li>
       }
 
       <!-- Next Page -->
       <li class="page-item" [class.disabled]="isLastPage()">
-        <a class="page-link" (click)="goToNext()" aria-label="Next">
+        <span class="page-link" (click)="goToNext()" aria-label="Next">
           <span aria-hidden="true">&raquo;</span>
-        </a>
+        </span>
       </li>
 
       <!-- Last Page -->
       <li class="page-item" [class.disabled]="isLastPage()">
-        <a class="page-link" (click)="goToLast()" aria-label="Last">
+        <span class="page-link" (click)="goToLast()" aria-label="Last">
           <span aria-hidden="true">&raquo;&raquo;</span>
-        </a>
+        </span>
       </li>
     </ul>
   </nav>
